# FxBsdiff

FxBsdiffLinux/FxBsdiffLib/: CMakeLists.txt
FxBsdiffLinux/FxBsdiffLib/fxbsdiff/: bsdiff.c  com_cfox_fxjbsdiff_JBsdiff.h
FxBsdiffWin/FxBsdiffLib/: CMakeLists.txt  library.h
FxBsdiffWin/FxBsdiffLib/fxbsdiff/: bsdiff.cpp
FxBspAndroidApp/: key.jks  settings.gradle
FxBspAndroidApp/app/: build.gradle
FxBspAndroidApp/app/src/androidTest/java/com/cfox/fxbspandroidapp/: ExampleInstrumentedTest.java
FxBspAndroidApp/app/src/main/: AndroidManifest.xml
FxBspAndroidApp/app/src/main/java/com/cfox/fxbspandroidapp/: MainActivity.java
FxBspAndroidApp/app/src/main/res/layout/: activity_main.xml
FxBspAndroidApp/app/src/main/res/values/: strings.xml
FxBspAndroidApp/app/src/test/java/com/cfox/fxbspandroidapp/: ExampleUnitTest.java
FxBspAndroidApp/fxbspatchlib/: CMakeLists.txt  build.gradle
FxBspAndroidApp/fxbspatchlib/src/androidTest/java/com/cfox/fxbspatchlib/: ExampleInstrumentedTest.java
FxBspAndroidApp/fxbspatchlib/src/main/: AndroidManifest.xml
FxBspAndroidApp/fxbspatchlib/src/main/cpp/fxbspatch/: bspatch.c  com_cfox_fxbspatchlib_FxBspatchNative.h
FxBspAndroidApp/fxbspatchlib/src/main/java/com/cfox/fxbspatchlib/: ApkUtils.java  (+2 more)
FxBspAndroidApp/fxbspatchlib/src/main/res/values/: strings.xml
FxBspAndroidApp/gradle/wrapper/: gradle-wrapper.properties
FxJBsdiff/: .classpath  .project
FxJBsdiff/src/: com_cfox_fxjbsdiff_JBsdiff.h
FxJBsdiff/src/com/cfox/fxjbsdiff/: JBsdFiffTestMain.java  JBsdiff.java
libs/AndroidLib/: fxbspatchlib-release.aar
(+1 files in other folders)
